@@ -12,24 +12,23 @@ DO NOT MODIFIY - GENERATED CODE
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>jruby-parent</artifactId>
-    <version>9.1.11.0-SNAPSHOT</version>
+    <version>9.2.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>jruby-core</artifactId>
   <name>JRuby Core</name>
   <properties>
-    <version.ruby>2.3.3</version.ruby>
+    <version.ruby>2.5.0</version.ruby>
     <prawn.dir>${test.dir}/prawn</prawn.dir>
     <spec.tags.dir>${spec.dir}/tags</spec.tags.dir>
     <polyglot.dump.pom>pom.xml</polyglot.dump.pom>
     <pkg.dir>${build.dir}/pkg</pkg.dir>
     <spec.dir>spec</spec.dir>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
-    <jruby.test.memory.permgen>2G</jruby.test.memory.permgen>
     <installer.gems>${jruby.win32ole.gem}</installer.gems>
     <prawn.git.repo>git://github.com/sandal/prawn.git</prawn.git.repo>
-    <version.ruby.minor>3</version.ruby.minor>
+    <version.ruby.minor>0</version.ruby.minor>
     <tzdata.version>2013d</tzdata.version>
-    <install4j.executable>/Applications/install4j 4/bin/install4jc</install4j.executable>
+    <install4j.executable>/Applications/install4j7/bin/install4jc</install4j.executable>
     <jay.bin>jay</jay.bin>
     <polyglot.dump.readonly>true</polyglot.dump.readonly>
     <dest.lib.dir>${lib.dir}</dest.lib.dir>
@@ -39,7 +38,7 @@ DO NOT MODIFIY - GENERATED CODE
     <rubyspec.1.8.dir>${rubyspec.dir}/1.8</rubyspec.1.8.dir>
     <jruby.launch.memory>1024M</jruby.launch.memory>
     <jruby.compile.memory>2G</jruby.compile.memory>
-    <version.ruby.major>2.3</version.ruby.major>
+    <version.ruby.major>2.5</version.ruby.major>
     <release.dir>release</release.dir>
     <create.sources.jar>false</create.sources.jar>
     <lib.dir>lib</lib.dir>
@@ -47,7 +46,7 @@ DO NOT MODIFIY - GENERATED CODE
     <parser.dir>core/src/main/java/org/jruby/parser</parser.dir>
     <jruby.basedir>${basedir}/..</jruby.basedir>
     <rubyspec.dir>${spec.dir}/ruby</rubyspec.dir>
-    <version.ruby.revision>56859</version.ruby.revision>
+    <version.ruby.revision>60928</version.ruby.revision>
     <jruby.test.memory>3G</jruby.test.memory>
     <mspec.dir>${spec.dir}/mspec</mspec.dir>
     <build.date>${maven.build.timestamp}</build.date>
@@ -102,7 +101,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-enxio</artifactId>
-      <version>0.16</version>
+      <version>0.17</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -124,7 +123,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-unixsocket</artifactId>
-      <version>0.17</version>
+      <version>0.19</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -135,7 +134,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-posix</artifactId>
-      <version>3.0.41</version>
+      <version>3.0.45</version>
       <exclusions>
         <exclusion>
           <artifactId>jnr-ffi</artifactId>
@@ -157,7 +156,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-ffi</artifactId>
-      <version>2.1.6</version>
+      <version>2.1.8</version>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
@@ -173,7 +172,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>org.jruby.joni</groupId>
       <artifactId>joni</artifactId>
-      <version>2.1.11</version>
+      <version>2.1.16</version>
     </dependency>
     <dependency>
       <groupId>org.jruby.extras</groupId>
@@ -183,7 +182,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>org.jruby.jcodings</groupId>
       <artifactId>jcodings</artifactId>
-      <version>1.0.18</version>
+      <version>1.0.30</version>
     </dependency>
     <dependency>
       <groupId>org.jruby</groupId>
@@ -193,17 +192,12 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>com.headius</groupId>
       <artifactId>invokebinder</artifactId>
-      <version>1.7</version>
+      <version>1.11</version>
     </dependency>
     <dependency>
       <groupId>com.headius</groupId>
       <artifactId>options</artifactId>
       <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>com.headius</groupId>
-      <artifactId>unsafe-fences</artifactId>
-      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>bsf</groupId>
@@ -272,6 +266,11 @@ DO NOT MODIFIY - GENERATED CODE
           <groupId>org.ow2.asm</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.headius</groupId>
+      <artifactId>modulator</artifactId>
+      <version>1.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -479,6 +478,7 @@ DO NOT MODIFIY - GENERATED CODE
               <goal>compile</goal>
             </goals>
             <configuration>
+              <debug>true</debug>
               <annotationProcessors>
                 <annotationProcessor>org.jruby.anno.AnnotationBinder</annotationProcessor>
               </annotationProcessors>
@@ -498,6 +498,7 @@ DO NOT MODIFIY - GENERATED CODE
               <goal>compile</goal>
             </goals>
             <configuration>
+              <debug>true</debug>
               <compilerArgs>
                 <compilerArg>-XDignore.symbol.file=true</compilerArg>
                 <compilerArg>-J-Duser.language=en</compilerArg>
@@ -534,9 +535,9 @@ DO NOT MODIFIY - GENERATED CODE
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
           <source>${base.java.version}</source>
-          <source>1.7</source>
+          <source>1.8</source>
           <target>${base.javac.version}</target>
-          <target>1.7</target>
+          <target>1.8</target>
           <useIncrementalCompilation>false</useIncrementalCompilation>
         </configuration>
       </plugin>
@@ -583,7 +584,7 @@ DO NOT MODIFIY - GENERATED CODE
           <systemProperties>
             <jruby.home>${basedir}/..</jruby.home>
           </systemProperties>
-          <argLine>-Xmx${jruby.test.memory} -XX:MaxPermSize=${jruby.test.memory.permgen} -Dfile.encoding=UTF-8 -Djava.awt.headless=true</argLine>
+          <argLine>-Xmx${jruby.test.memory} -Dfile.encoding=UTF-8 -Djava.awt.headless=true</argLine>
           <includes>
             <include>org/jruby/test/MainTestSuite.java</include>
             <include>org/jruby/embed/**/*Test*.java</include>
@@ -618,6 +619,14 @@ DO NOT MODIFIY - GENERATED CODE
                 </transformer>
               </transformers>
               <createSourcesJar>${create.sources.jar}</createSourcesJar>
+              <filters>
+                <filter>
+                  <artifact>com.headius:invokebinder</artifact>
+                  <excludes>
+                    <exclude>**/module-info.class</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
@@ -677,7 +686,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -711,7 +732,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -745,7 +778,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -779,7 +824,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -813,7 +870,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -847,7 +916,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -881,7 +962,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -915,7 +1008,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
@@ -949,7 +1054,19 @@ DO NOT MODIFIY - GENERATED CODE
                       <pattern>org.objectweb</pattern>
                       <shadedPattern>org.jruby.org.objectweb</shadedPattern>
                     </relocation>
+                    <relocation>
+                      <pattern>me.qmx.jitescript</pattern>
+                      <shadedPattern>org.jruby.me.qmx.jitescript</shadedPattern>
+                    </relocation>
                   </relocations>
+                  <filters>
+                    <filter>
+                      <artifact>com.headius:invokebinder</artifact>
+                      <excludes>
+                        <exclude>**/module-info.class</exclude>
+                      </excludes>
+                    </filter>
+                  </filters>
                 </configuration>
               </execution>
             </executions>
